build(📦): [Update package.json dependencies and keywords]
- Updated `@stylistic/eslint-plugin` from `^5.2.0` to `^5.2.2`.
- Updated `@types/bun` from `^1.2.18` to `^1.2.19`.
- Updated `typescript-eslint` from `^8.37.0` to `^8.38.0`.
- Rearranged keywords for better organization.

--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
 	"license": "MIT",
 	"keywords": [
 		"bun",
-		"event-driven",
-		"event-emitter",
 		"node",
 		"nowarajs",
+		"event-driven",
+		"event-emitter",
 		"type-safe",
-		"typed-events",
-		"typescript"
+		"typed-events"
 	],
 	"scripts": {
 		"build": "bun builder.ts",
@@ -27,12 +26,12 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.31.0",
-		"@stylistic/eslint-plugin": "^5.2.0",
-		"@types/bun": "^1.2.18",
+		"@stylistic/eslint-plugin": "^5.2.2",
+		"@types/bun": "^1.2.19",
 		"eslint": "^9.31.0",
 		"globals": "^16.3.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.37.0"
+		"typescript-eslint": "^8.38.0"
 	},
 	"exports": {
 		"./types": "./dist/types/index.js",
