--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
 	"license": "MIT",
 	"keywords": [
 		"bun",
-		"node",
 		"nowarajs",
-		"event-driven",
+		"typed-event-emitter",
 		"event-emitter",
+		"event-driven",
 		"type-safe",
 		"typed-events"
 	],
@@ -25,13 +25,13 @@
 		"test": "bun test --coverage"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.33.0",
+		"@eslint/js": "^9.34.0",
 		"@stylistic/eslint-plugin": "^5.2.3",
 		"@types/bun": "^1.2.20",
-		"eslint": "^9.33.0",
+		"eslint": "^9.34.0",
 		"globals": "^16.3.0",
 		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.39.1"
+		"typescript-eslint": "^8.40.0"
 	},
 	"exports": {
 		"./types": "./dist/types/index.js",
@@ -88,5 +88,9 @@
 			"tagMessage": "v{{newVersion}}",
 			"tagBody": "v{{newVersion}}"
 		}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/NowaraJS/typed-event-emitter.git"
 	}
 }
